resources/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt
  annotations:
    external-dns.alpha.kubernetes.io/hostname: zigbee2mqtt.crt.house
    nginx.org/websocket-services: zigbee2mqtt
    gethomepage.dev/href: https://zigbee2mqtt.crt.house
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Home Automation Device Adder
    gethomepage.dev/group: Home Automation
    gethomepage.dev/icon: zigbee2mqtt
    gethomepage.dev/name: Zigbee2MQTT
    gethomepage.dev/pod-selector: ""
spec:
  ingressClassName: nginx-internal
  rules:
    - host: "zigbee2mqtt.crt.house"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: zigbee2mqtt
                port:
                  number: 8080
  tls:
    - hosts:
      - zigbee2mqtt.crt.house
